--- a/crodeon/locales/en-US/relais-writer.json
+++ b/crodeon/locales/en-US/relais-writer.json
@@ -1,5 +1,5 @@
 {
-    "relaisWriter": {
+    "crodeonRelaisWriter": {
         "error_unknown": "Error unknown!",
         "value": "Value",
         "pending": "Pending...",
